horizontal scroll bug

--- a/client/src/Pages/Layout/Layout.css
+++ b/client/src/Pages/Layout/Layout.css
@@ -1,3 +1,7 @@
+body{
+  overflow-x: hidden;
+}
+
 .Layout nav ul {
   margin: 0;
   padding: 0;
